# Cadastro-funcionario

./: build.sh  pyproject.toml  requirements.txt
accounts/: urls.py  views.py
accounts/templates/accounts/: login.html
contacts/: views.py
contacts/templates/contacts/: create.html
funcionarios/: admin.py  forms.py  models.py  urls.py  views.py
funcionarios/migrations/: 0001_initial.py  0002_remove_funcionario_criado_em_alter_funcionario_cpf_and_more.py  0003_alter_funcionario_cidade_alter_funcionario_cpf_and_more.py  0004_remove_funcionario_endereco_funcionario_bairro_and_more.py  0005_alter_funcionario_cep.py  0006_funcionario_categoria_estadual_and_more.py  0007_remove_funcionario_categoria_estadual_and_more.py
funcionarios/static/admin/css/: custom_admin.css
funcionarios/static/js/: cep.js  funcionario.js  mascaras.js
funcionarios/templates/funcionarios/: lista.html
mysite/: admin.py  admin_site.py  settings.py  urls.py
mysite/mysite/: admin.py  settings.py  urls.py
templates/admin/: base_site.html
test/contacts/: test_forms.py  test_views.py
test/polls/: test_models.py
