[project]
name = "full-stack-django"
version = "0.1.0"
description = ""
authors = [
    {name = "diegoff",email = "diegoff_@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "dj-database-url",
    "psycopg2-binary",
    "gunicorn",
    "whitenoise (>=6.10.0,<7.0.0)",
    "waitress (>=3.0.2,<4.0.0)"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.mysite.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ipython = "*"
pytest-django = "*"

